fix: invisible padding right on add recipe rout

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -114,6 +114,8 @@ body > iframe {
 	justify-content: center;
 	width: 100%;
 	height: 100%;
+
+	overflow-y: auto;
 }
 
 @media screen and (max-width: 640px) {
